--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,73 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+*{
+padding: 0;
+margin: 0;
+box-sizing: border-box;
+text-transform: capitalize;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+.form{
+ 
+  width: 300px;
+  padding: 1em;
+  transition:.5s;
+  background: rgba( 255, 255, 255, 0.50 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 4px );
+-webkit-backdrop-filter: blur( 4px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+  
+}
+.form-control{
+  padding: 1em;
+  display: grid;
+  align-items: center;
+  
+}
+.form-control input{
+  padding:.7rem;
+  outline: none;
+  width: 100%;
+
+}
+button{
+  padding:.4em .8em;
+  width: 100%;
+  background-color: blueviolet;
+  color: white;
+  font-weight: bold;
+  font-size:1.4rem;
+  outline: none;
+  border: none;
+}
+.form-control label{
+  font-size:1.2rem;
+  margin-bottom:10px;
+}
+form{
+  display: grid;
+  grid-template-columns:1fr;
+  gap:1em;
+  
+}
+.error{
+  color:rebeccapurple;
+  margin-top:10px;
+  font-weight:300;
+}
+footer{
+  margin-top: 1em;
+}
+body{
+  background:lightgreen;
+}
+header{
+  color:darkblue;
+}
+button:hover{
+  border-radius:6px;
+  cursor: pointer;
+}
+input:focus{
+  border:2px solid black;
 }
